2009-03-24  Esteban Sanchez  <estebans@artica.es>

	* udp_server/udp_server.cc, udp_server/udp_server.h: Replaced
	blankspaces with tabs.

2009-03-16  Manuel Arostegui <marostegui@artica.es>

	* bin/pandora_agent.conf: Added example of a UDP server
	to allow start/stop process.

2009-03-13  Manuel Arostegui <marostegui@artica.es>

	* bin/pandora_agent.conf: Added example for the new features
	such as watchdog and asynchronous mode.

2009-02-13  Ramon Novoa  <rnovoa@artica.es>

	* windows/pandora_wmi.cc
	  windows/pandora_wmi.h
	  modules/pandora_module_exec.cc: Hide console window when executing
	  exec modules.
	
	* modules/pandora_module_proc.cc,
	  modules/pandora_module_proc.h,
	  modules/pandora_module_factory.cc: Added module_retries,
	  module_startdelay and module_retrydelay options to proc
	  modules.

2009-02-12  Esteban Sanchez  <estebans@artica.es>

	* main.cc: Added new parameter to help text.

2009-02-09  Ramon Novoa  <rnovoa@artica.es>

	* windows/pandora_wmi.cc,
	  windows/pandora_wmi.h: Allow custom process creation flags.

	* pandora_windows_service.cc: Hide console window when calling
	  tentacle client.

2009-02-09  Esteban Sanchez  <estebans@artica.es>

	* main.cc: Added a new parameter --process to run the agent as a
	single process instead of a service.

	* pandora_windows_service.h: Interval property is now public so it can
	be readed if it's running as a single process.

2008-12-03  Esteban Sanchez  <estebans@artica.es>

	* bin/PandoraAgent.exe: Updated to last commit.

2008-12-03  Esteban Sanchez  <estebans@artica.es>

	* pandora.[cc,h]: Function is_enabled() was moved here to be
	accesible.

	* pandora_windows_service.cc: Removed is_enabled() private function.

	* windows_service.cc: Service is now interactive, so it can open
	interactive processes in the watchdog mode of proc modules.

	* modules/pandora_module_factory.cc: Added "module_watchdog" and
	"module_start_command" tokens to service and process modules. Style
	correction.
