@@ -1,3 +1,9 @@
+2009-04-02  Ramon Novoa  <rnovoa@artica.es>
+
+	* modules/pandora_module_proc.cc,
+	  modules/pandora_module_proc.h: Fixed module_startdelay and
+	  module_retrydelay behavior.
+
 2009-03-24  Esteban Sanchez  <estebans@artica.es>
 
 	* udp_server/udp_server.cc, udp_server/udp_server.h: Replaced
